--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,19 @@
 {
-    // Format a file on save. A formatter must be available, the file must not be auto-saved, and editor must not be shutting down.
+  // Format a file on save. A formatter must be available, the file must not be auto-saved, and editor must not be shutting down.
 
-"editor.formatOnSave": true,
+  "editor.formatOnSave": true,
 
-// Enable/disable default JavaScript formatter (For Prettier)
+  // Support using flow through your node_modules folder, WARNING: Checking this box is a security risk. When you open a project we will immediately run code contained within it.
+  "flow.useNPMPackagedFlow": true,
 
-"javascript.format.enable": false,
+  // Enable/disable JavaScript validation. (For Flow)
+  "javascript.validate.enable": false,
 
-// Use 'prettier-eslint' instead of 'prettier'. Other settings will only be fallbacks in case they could not be inferred from eslint rules.
+  // Enable/disable default JavaScript formatter (For Prettier)
 
-"prettier.eslintIntegration": true
+  "javascript.format.enable": false,
+
+  // Use 'prettier-eslint' instead of 'prettier'. Other settings will only be fallbacks in case they could not be inferred from eslint rules.
+
+  "prettier.eslintIntegration": true
 }
