--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.3",
     "flow": "^0.2.3",
     "flow-bin": "^0.69.0",
     "react": "^16.3.1",
@@ -10,6 +13,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
+    "react-test-renderer": "^16.3.1",
     "redux": "^3.7.2"
   },
   "scripts": {
