--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,4 +16,8 @@
   // Use 'prettier-eslint' instead of 'prettier'. Other settings will only be fallbacks in case they could not be inferred from eslint rules.
 
   "prettier.eslintIntegration": true
+
+  //"editor.fontFamily": "Fira Code",
+
+  //"editor.fontLigatures": true
 }
