--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "enzyme-to-json": "^3.3.3",
     "flow": "^0.2.3",
     "flow-bin": "^0.69.0",
+    "material-ui": "^0.20.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
+    "react-tap-event-plugin": "^3.0.2",
     "react-test-renderer": "^16.3.1",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6"
