--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "enzyme-to-json": "^3.3.3",
     "flow": "^0.2.3",
     "flow-bin": "^0.69.0",
+    "history": "^4.7.2",
     "material-ui": "^0.20.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
