--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,9 +15,11 @@
 
   // Use 'prettier-eslint' instead of 'prettier'. Other settings will only be fallbacks in case they could not be inferred from eslint rules.
 
-  "prettier.eslintIntegration": true
+  "prettier.eslintIntegration": true,
 
   //"editor.fontFamily": "Fira Code",
 
   //"editor.fontLigatures": true
+
+  "editor.tabSize": 2
 }
