--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "flow": "^0.2.3",
     "flow-bin": "^0.69.0",
     "history": "^4.7.2",
+    "lodash": "^4.17.5",
     "material-ui": "^0.20.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
